--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/compiler-cli": "^17.0.0",
     "@commitlint/config-conventional": "^18.4.3",
     "@types/jasmine": "~5.1.0",
+    "autoprefixer": "^10.4.20",
     "commitlint": "^18.4.3",
     "husky": "^8.0.3",
     "jasmine-core": "~5.1.0",
@@ -37,6 +38,8 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
     "typescript": "~5.2.2"
   }
 }
