--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "ng lint --max-warnings=0"
   },
   "private": true,
   "dependencies": {
@@ -29,8 +30,10 @@
     "@angular/compiler-cli": "^17.0.0",
     "@commitlint/config-conventional": "^18.4.3",
     "@types/jasmine": "~5.1.0",
+    "angular-eslint": "19.0.2",
     "autoprefixer": "^10.4.20",
     "commitlint": "^18.4.3",
+    "eslint": "^9.16.0",
     "husky": "^8.0.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
@@ -40,6 +43,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.16",
-    "typescript": "~5.2.2"
+    "typescript": "~5.2.2",
+    "typescript-eslint": "8.18.0"
   }
 }
