--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.0",
@@ -32,15 +32,16 @@
     "@commitlint/config-conventional": "~18.6.2",
     "@commitlint/prompt-cli": "~18.6.1",
     "@types/jasmine": "~5.1.0",
+    "@types/node": "^18.0.0",
     "angular-eslint": "19.0.2",
     "autoprefixer": "^10.4.20",
     "commitlint": "^18.4.3",
     "eslint": "^9.16.0",
     "husky": "^9.1.7",
-    "jasmine-core": "~5.1.0",
-    "karma": "~6.4.0",
+    "jasmine-core": "~5.4.0",
+    "karma": "~6.4.4",
     "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage": "~2.2.0",
+    "karma-coverage": "~2.2.1",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "postcss": "^8.4.49",
